--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body class="body">
-    <canvas id="gameCanvas"></canvas>
+    <div class="wrapper">
+      <canvas id="gameCanvas"> </canvas>
+    </div>
   </body>
 </html>
